--- a/refinery_core/Cargo.toml
+++ b/refinery_core/Cargo.toml
@@ -14,6 +14,7 @@ rusqlite-bundled = ["rusqlite", "rusqlite/bundled"]
 tiberius = ["dep:tiberius", "futures", "tokio", "tokio/net"]
 tiberius-config = ["tiberius", "tokio", "tokio-util", "serde"]
 tokio-postgres = ["dep:tokio-postgres", "tokio", "tokio/rt"]
+tokio-rusqlite = ["dep:tokio-rusqlite", "tokio"]
 mysql_async = ["dep:mysql_async"]
 serde = ["dep:serde"]
 toml = ["serde", "dep:toml"]
@@ -30,6 +31,7 @@ walkdir = "2.3.1"
 
 # allow multiple versions of the same dependency if API is similar
 rusqlite = { version = ">= 0.23, <= 0.31", optional = true }
+tokio-rusqlite = { version ">= 0.5, <= 0.6", optional = true }
 postgres = { version = ">=0.17, <= 0.19", optional = true }
 tokio-postgres = { version = ">= 0.5, <= 0.7", optional = true }
 mysql = { version = ">= 21.0.0, <= 24", optional = true, default-features = false, features = ["minimal"] }
