--- a/refinery_core/Cargo.toml
+++ b/refinery_core/Cargo.toml
@@ -31,7 +31,7 @@ walkdir = "2.3.1"
 
 # allow multiple versions of the same dependency if API is similar
 rusqlite = { version = ">= 0.23, <= 0.31", optional = true }
-tokio-rusqlite = { version ">= 0.5, <= 0.6", optional = true }
+tokio-rusqlite = { version = ">= 0.5, <= 0.6", optional = true }
 postgres = { version = ">=0.17, <= 0.19", optional = true }
 tokio-postgres = { version = ">= 0.5, <= 0.7", optional = true }
 mysql = { version = ">= 21.0.0, <= 24", optional = true, default-features = false, features = ["minimal"] }
